Add passport GET/POST & role GET
Test Plan: no

Reviewers: yuyang, zhaozening

Reviewed By: yuyang, zhaozening

Differential Revision: http://review.xiaoyun.com/D62

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "author": "wangzezhi",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "lodash": "^4.17.10",
     "passport": "^0.4.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
@@ -36,6 +38,7 @@
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.16.0",
     "@types/express-session": "^1.15.10",
+    "@types/lodash": "^4.14.116",
     "@types/passport": "^0.4.6",
     "@types/sequelize": "^4.27.24",
     "@types/uuid": "^3.4.3",
