--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "connect-history-api-fallback": "^1.5.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "errorhandler": "^1.5.0",
@@ -30,11 +31,13 @@
     "passport": "^0.4.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
+    "request": "^2.88.0",
     "sequelize": "^4.38.0",
     "uuid": "^3.3.2",
     "winston": "^2.4.0"
   },
   "devDependencies": {
+    "@types/connect-history-api-fallback": "^1.3.1",
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.4",
     "@types/errorhandler": "0.0.32",
@@ -42,6 +45,7 @@
     "@types/express-session": "^1.15.10",
     "@types/lodash": "^4.14.116",
     "@types/passport": "^0.4.6",
+    "@types/request": "^2.47.1",
     "@types/sequelize": "^4.27.24",
     "@types/uuid": "^3.4.3",
     "@types/winston": "^2.3.9",
